[package]
name = "ss58-org"
version = "0.2.2"
edition = "2021"

[dependencies]
base58 = "0.2.0"
blake2 = "0.10.6"
hex = "0.4.3"
js-sys = "0.3.69"
leptos = { version = "0.6.9", features = ["csr"] }
leptos_router = { version = "0.6.9", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Clipboard",
    "Document",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Navigator",
    "Window",
]
