[package]
name = "ss58-org"
version = "0.2.4"
edition = "2021"

[dependencies]
base58 = "0.2"
blake2 = "0.10"
hex = "0.4"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "Document",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Navigator",
    "Window",
]
