[package]
name = "ss58-org"
version = "0.2.3"
edition = "2021"

[dependencies]
base58 = "0.2"
blake2 = "0.10"
hex = "0.4"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "Document",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Navigator",
    "Window",
]
